--- a/system_configs.yaml
+++ b/system_configs.yaml
@@ -18,3 +18,11 @@
         name_servers:
           - 192.168.1.1
           - 3.3.3.3
+          - 8.8.8.8
+          - 1.1.1.1
+
+    - name: CONFIGURE BANNER FROM FILE
+      junos_banner:
+        banner:  motd
+        text: "{{ lookup('file', './banners/motd.cfg') }}"
+        state: present
