fixed incorrect template path

--- a/iac_demo.yaml
+++ b/iac_demo.yaml
@@ -81,6 +81,6 @@
 
     - name: ENSURE THAT CISCO SNMP CONFIGS ARE ABSENT
       ios_config:
-        src: ios_snmp_absent.j2
+        src: ios_snmp_backout.j2
       ignore_errors: True
       when: ansible_network_os == 'ios'
