--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,5 @@
 [defaults]
 stdout_callback = yaml
-connection = smart
 deprecation_warnings = False
 host_key_checking = False
 retry_files_enabled = False
@@ -8,3 +7,4 @@ inventory = /home/student1/networking-workshop/lab_inventory/hosts
 [persistent_connection]
 connect_timeout = 600
 command_timeout = 600
+log_messages = True
