--- a/eos_host.yaml
+++ b/eos_host.yaml
@@ -22,5 +22,5 @@
 - name: CONFIGURE BANNER FROM FILE
   eos_banner:
     banner:  motd
-    text: "{{ lookup('file', './banners/motd.cfg') }}"
+    text: "{{ lookup('file', playbook_dir + '/banners/motd.cfg') }}"
     state: present
