--- a/ios_host.yaml
+++ b/ios_host.yaml
@@ -2,7 +2,7 @@
 
 - name: SET THE HOSTNAME
   ios_system:
-    hostname: "{{ inventory_hostname }}_ansible"
+    hostname: "{{ inventory_hostname }}-ansible"
     domain_name: demo.ansible.com
     domain_search:
       - ansible.com
