--- a/mv_system_configs.yaml
+++ b/mv_system_configs.yaml
@@ -4,7 +4,7 @@
   gather_facts: false
 
   tasks:
-    - name: ENSURE THAT THE SYSTEM CONGIGS ARE PRESENT
+    - name: ENSURE THAT THE SYSTEM CONFIGS ARE PRESENT
       include_tasks: "{{ ansible_network_os }}_host.yaml"
       tags: configure
 
