--- a/ios_remove.yaml
+++ b/ios_remove.yaml
@@ -1,12 +1,12 @@
 ---
 
-- name: SET THE HOSTNAME
+- name: ENSURE THAT THE DOMAIN SEARCH LIST IS ABSENT
   ios_system:
     state: absent
     domain_name:
     domain_search:
 
-- name: ENSURE THAT THE NAME SERVERS ARE CONFIGURED
+- name: ENSURE THAT THE NAME SERVERS ARE ABSENT
   ios_system:
     state: absent
     name_servers:
