--- a/eos_remove.yaml
+++ b/eos_remove.yaml
@@ -3,3 +3,6 @@
 - name: ENSURE DOMAIN SEARCH LIST IS ABSENT
   eos_system:
     state: absent
+    name_servers:
+      - 192.168.1.1
+      - 3.3.3.3
