--- a/tower_cache.yaml
+++ b/tower_cache.yaml
@@ -9,23 +9,23 @@
     - eos_facts:
         gather_subset: "!config"
 
-   # - meta: clear_facts
+    - meta: clear_facts
 
-    - debug: var=ansible_net_interfaces
+    #- debug: var=ansible_net_interfaces
       
 
        
 
     
 
-- name: Tower Caching behaviour
-  hosts: rtr2, rtr4
-  gather_facts: no
-  tags: purge
+# - name: Tower Caching behaviour
+#   hosts: rtr2, rtr4
+#   gather_facts: no
+#   tags: purge
 
-  tasks:
-    - eos_facts:
-        gather_subset: "!config"
+#   tasks:
+#     - eos_facts:
+#         gather_subset: "!config"
 
-    - meta: clear_facts
+#     - meta: clear_facts
       
