testing inventory cache

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,5 @@ inventory = /home/student1/networking-workshop/lab_inventory/hosts
 [persistent_connection]
 connect_timeout = 600
 command_timeout = 600
+[inventory]
+cache=True
