--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ deprecation_warnings = False
 host_key_checking = False
 retry_files_enabled = False
 inventory = /home/student1/networking-workshop/lab_inventory/hosts
+collections_path = ./collections
 [persistent_connection]
 connect_timeout = 600
 command_timeout = 600
