--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,3 +1,3 @@
 collections:
   - name: cisco.ios
-    source: https://cloud.redhat.api/automation-hub/
+    source: https://cloud.redhat.com/api/automation-hub/
