--- a/ios_rmdemo.yml
+++ b/ios_rmdemo.yml
@@ -9,7 +9,7 @@
 
     - name: use the collection facts
       cisco.ios.ios_facts:
-        gather_network_resources: !vlans,all
+        gather_network_resources: all, !vlans
       register: result
 
     - debug: var=result
