--- a/ios_rm_acl.yml
+++ b/ios_rm_acl.yml
@@ -2,25 +2,9 @@
 - name: IOS ACLs
   hosts: rtr1
   tasks:
-    - name: TEST merged ACLS
+    - name: TEST "{{state}}"ed ACLS
       cisco.ios.ios_acls:
-        state: merged
-        config:
-          - afi: ipv4
-            acls:
-                - name: 110
-                  aces:
-                    - sequence: 1
-                      protocol_options:
-                        icmp:
-                          traceroute: true
-                    - grant: deny
-                      protocol_options:
-                        tcp:
-                          ack: true
-                      source:
-                        host: 198.51.100.0
-                      destination:
-                        host: 198.51.110.0
-                        port_protocol:
-                          eq: telnet
+        state: "{{ state }}"
+      register: result
+    - debug:
+        msg: "{{ result.state }}"
