--- a/caretaker-deploy/host_vars/rtr2/l3_interfaces.yml
+++ b/caretaker-deploy/host_vars/rtr2/l3_interfaces.yml
@@ -2,9 +2,11 @@
 interfaces:
   interfaces_l3_config:
     - name: Loopback100
-      ipv4: 192.168.2.2/32
+      ipv4:
+        - address: 192.168.2.2/32
     - name: Tunnel0
-      ipv4: 10.24.24.2/24
+      ipv4:
+        - address: 10.24.24.2/24
   interfaces_config:
     - name: Loopback100
       description: BGP interface for rtr2
