--- a/caretaker-deploy/deploy.yml
+++ b/caretaker-deploy/deploy.yml
@@ -11,13 +11,23 @@
       arista.eos.eos_interfaces:
         config: "{{ interfaces.interfaces_config }}"
         state: merged
-
+# TODO: TEST
     - name: Configure the L3 interfaces
       arista.eos.eos_l3_interfaces:
         config: "{{ interfaces.interfaces_l3_config }}"
         state: merged
+# TODO: TEST
+
+    - name: Configure the tunnels
+      arista.eos.eos_config:
+        parents: interface Tunnel0
+        lines:
+          - tunnel source interface Ethernet1
+          - tunnel destination "{{ tunnel_vars.tunnel_destination }}"
+# TODO: TEST
 
     - name: Configure the routing protocol
       arista.eos.eos_bgp:
         config: "{{ bgp_config }}"
         operation: replace
+# TODO: TEST
