ipaddr filter workaround

--- a/caretaker-deploy/host_vars/rtr4/bgp.yml
+++ b/caretaker-deploy/host_vars/rtr4/bgp.yml
@@ -1,6 +1,7 @@
 bgp_config:
   bgp_as: 65000
-  router_id: "{{ interfaces.interfaces_l3_config[0]['ipv4'] | ipaddr('network') }}"
+  #router_id: "{{ interfaces.interfaces_l3_config[0]['ipv4'] | ipaddr('network') }}"
+  router_id: 192.168.4.4 # TODO fix with above later
   log_neighbor_changes: true
   address_family:
   neighbors:
