--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,12 +12,8 @@ command_timeout = 600
 cache=True
 
 [galaxy]
+server_list = release_galaxy
 
-server_list = automation_hub, release_galaxy
-
-[galaxy_server.automation_hub]
-url=https://cloud.redhat.com/api/automation-hub/
-auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
 
 [galaxy_server.release_galaxy]
 url=https://galaxy.ansible.com/
