--- a/middleware_demo/simple.yml
+++ b/middleware_demo/simple.yml
@@ -2,12 +2,18 @@
 - name: Simple playbook
   hosts: node1
   gather_facts: no
+  vars:
+    isam_up: yes
   tasks:
     - name: Ensure that python3 is installed
       yum:
         name: python3
         state: present
       become: yes
+      tags: python3
+    - name: Start the python3 webserver
+      command: "python3 -m http.server 8080"
+      when: isam_up
     - name: Check reverse proxy
       debug:
         msg: "Status OK"
@@ -26,3 +32,4 @@
     - debug:
         msg: "{{ response }}"
       verbosity: 1
+      tags: mga
