--- a/middleware_demo/simple.yml
+++ b/middleware_demo/simple.yml
@@ -11,10 +11,10 @@
         state: present
       become: yes
       tags: python3
-    - name: Start the python3 webserver
-      command: "python3 -m http.server 8080"
-      when: isam_up
-      tags: python3
+    # - name: Start the python3 webserver
+    #   command: "python3 -m http.server 8080 "
+    #   when: isam_up
+    #   tags: python3
     - name: Check reverse proxy
       debug:
         msg: "Status OK"
