--- a/middleware_demo/simple.yml
+++ b/middleware_demo/simple.yml
@@ -44,10 +44,16 @@
         - systems_up
         - mga
 
+    - name: Create a var to collect failed nodes
+      set_fact:
+        failed_nodes: "{{ nodes|default([]) + [ inventory_hostname ] }}"
+      when: "'OK' not in response.msg"
+      tags: mga
+
     - name: Nodes with failures
       set_stats:
         data:
-          nodes: "{{ inventory_hostname | list }}"
+          nodes: "{{ failed_nodes }}"
       when: "'OK' not in response.msg"
       tags: mga
     - fail:
