--- a/middleware_demo/simple.yml
+++ b/middleware_demo/simple.yml
@@ -19,10 +19,18 @@
       debug:
         msg: "Status OK"
       tags: reverse_proxy
+    - name: Restart reverse proxy
+      debug:
+        msg: "Restarting reverse proxy"
+      tags: restart_rp
     - name: Check WebSeal
       debug:
         msg: "WebSeal OK"
       tags: webseal
+    - name: Restart webseal
+      debug:
+        msg: "Restarting webseal"
+      tags: restart_ws
     - name: Check MGA
       uri:
         url: "http://{{ inventory_hostname }}:8080"
@@ -30,7 +38,14 @@
       tags: mga
       register: response
       failed_when: false
-
+    - name: Restart MGA
+      debug:
+        msg: "Restarting the Junction"
+      tags: restart_mga
+    - name: Fail the MGA restart
+      fail:
+        msg: "Restarting MGA failed"
+      tags: restart_mga
     - debug:
         msg: "{{ response }}"
         verbosity: 1
